--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
+
+
 {
+  
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite", 
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+    
   },
+
+  
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,4 +40,6 @@
   "main": "eslint.config.js",
   "author": "",
   "license": "ISC"
+  
 }
+
